--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <link rel="stylesheet" href="/assets/css/minimap.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript" src="https://livechat.pavietnam.vn/js/script.js" id="live_chat_30s" data-lang="vi"></script>
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" /> -->
     <!-- <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeBmJ2801jKYDumo5T9aMpVb6J6eIqAcM"
